--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snake</title>
+    <title>Snake Game - DFZ</title>
     <link rel="stylesheet" href="css.css">
 </head>
 <body>
@@ -18,6 +18,6 @@
             <img src="./g1.png" alt="">
         </div>
     </div>
-    <script type="module" src="a.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
